--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+div>img {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
